// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`i18nProps > should generate paths for a valid collection 1`] = `
[
  {
    "data": {
      "basePath": "/",
      "contentPath": "test",
      "locale": "de-CH",
      "slug": "slug-de-ch",
      "translationId": "magic.mdx",
    },
    "translatedPath": "/logbuch/posts/slug-de-ch",
    "translations": {
      "de-CH": "/logbuch/posts/slug-de-ch",
      "zh-CN": "/zh-CN/blog/posts/slug-zh-cn",
    },
  },
  {
    "data": {
      "basePath": "/",
      "contentPath": "test",
      "locale": "zh-CN",
      "slug": "slug-zh-cn",
      "translationId": "magic.mdx",
    },
    "translatedPath": "/zh-CN/blog/posts/slug-zh-cn",
    "translations": {
      "de-CH": "/logbuch/posts/slug-de-ch",
      "zh-CN": "/zh-CN/blog/posts/slug-zh-cn",
    },
  },
]
`;

exports[`i18nPropsAndParams > should generate full paths if prefixDefaultLocale is true 1`] = `
[
  {
    "params": {
      "blog": "logbuch",
      "locale": "de-CH",
      "slug": "slug-de-ch",
    },
    "props": {
      "data": {
        "basePath": "/",
        "contentPath": "test",
        "locale": "de-CH",
        "slug": "slug-de-ch",
        "translationId": "magic.mdx",
      },
      "translatedPath": "/de-CH/logbuch/posts/slug-de-ch",
      "translations": {
        "de-CH": "/de-CH/logbuch/posts/slug-de-ch",
        "zh-CN": "/zh-CN/blog/posts/slug-zh-cn",
      },
    },
  },
  {
    "params": {
      "blog": "blog",
      "locale": "zh-CN",
      "slug": "slug-zh-cn",
    },
    "props": {
      "data": {
        "basePath": "/",
        "contentPath": "test",
        "locale": "zh-CN",
        "slug": "slug-zh-cn",
        "translationId": "magic.mdx",
      },
      "translatedPath": "/zh-CN/blog/posts/slug-zh-cn",
      "translations": {
        "de-CH": "/de-CH/logbuch/posts/slug-de-ch",
        "zh-CN": "/zh-CN/blog/posts/slug-zh-cn",
      },
    },
  },
]
`;

exports[`i18nPropsAndParams > should generate paths for a valid collection 1`] = `
[
  {
    "params": {
      "blog": "logbuch",
      "locale": undefined,
      "slug": "slug-de-ch",
    },
    "props": {
      "data": {
        "basePath": "/",
        "contentPath": "test",
        "locale": "de-CH",
        "slug": "slug-de-ch",
        "translationId": "magic.mdx",
      },
      "translatedPath": "/logbuch/posts/slug-de-ch",
      "translations": {
        "de-CH": "/logbuch/posts/slug-de-ch",
        "zh-CN": "/zh-CN/blog/posts/slug-zh-cn",
      },
    },
  },
  {
    "params": {
      "blog": "blog",
      "locale": "zh-CN",
      "slug": "slug-zh-cn",
    },
    "props": {
      "data": {
        "basePath": "/",
        "contentPath": "test",
        "locale": "zh-CN",
        "slug": "slug-zh-cn",
        "translationId": "magic.mdx",
      },
      "translatedPath": "/zh-CN/blog/posts/slug-zh-cn",
      "translations": {
        "de-CH": "/logbuch/posts/slug-de-ch",
        "zh-CN": "/zh-CN/blog/posts/slug-zh-cn",
      },
    },
  },
]
`;

exports[`i18nPropsAndParams > should throw an error if an unknown locale is used 1`] = `[Error: No slugs found for locale zh-CN]`;

exports[`i18nPropsAndParams > should throw an error if not all params can be filled 1`] = `[Error: No segment value found for route segment "unknown". Did you forget to provide it?]`;
